# snarefx

./: .gitmodules  Dockerfile  README.md  docker-compose.yml  train_mastering.py
deepafx/: config_mastering.py  dafx_layer.py  evaluate.py  generators.py  generators.py.nick  inference.py  lv2_plugin.py  models.py  train_mastering.py
deepafx/pool_loss_map/: aps_pool.py  autopool.py  losses.py  mean_average_precision.py  net.py
deepafx/tf2lib/: __init__.py
deepafx/tf2lib/data/: __init__.py  dataset.py
deepafx/tf2lib/image/: __init__.py
deepafx/tf2lib/ops/: __init__.py
deepafx/tf2lib/pooling/: __init__.py  pooling.py
deepafx/tf2lib/specs/: __init__.py  specs.py
deepafx/tf2lib/utils/: __init__.py  hcnn_utils.py  utils.py
lv2_plugs/: CMakeLists.txt  README.md  test.c
lv2_plugs/SexyZebra/: CMakeLists.txt  SexyZebra.c
lv2_plugs/dsp/: CMakeLists.txt  biquad.c  biquad.h  dynamic_graphic_eq.c  dynamic_graphic_eq.h  frame_envelope_follower.c  frame_envelope_follower.h  so_lattice.c  so_lattice.h  util.c  util.h
lv2_plugs/generate_ttl/: generate_ttl.c  plugin_info.h  remove_quotes.awk
models/mastering/full_model_19/: full_model_19.params.npy
